--- a/Reproducible Research Projects.ipynb
+++ b/Reproducible Research Projects.ipynb
@@ -422,6 +422,9 @@
    "latex_user_defs": false,
    "report_style_numbering": false,
    "user_envs_cfg": false
+  },
+  "livereveal": {
+   "autolaunch": true
   }
  },
  "nbformat": 4,
